objects/LBI__PrimaryAttribute__c.object
<CustomObject>
    <fields>
        <fullName>LBI__APIDisplayName__c</fullName>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__APIFieldName__c</fullName>
        <externalId>true</externalId>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LBI__APIFieldType__c</fullName>
        <label>API Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BOOLEAN</fullName>
                </value>
                <value>
                    <fullName>CURRENCY</fullName>
                </value>
                <value>
                    <fullName>DATETIME</fullName>
                </value>
                <value>
                    <fullName>NUMBER</fullName>
                </value>
                <value>
                    <fullName>STRING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LBI__DisplayNameFormula__c</fullName>
        <formula>IF(ISBLANK(LBI__APIDisplayName__c),
LBI__APIFieldName__c
,
LBI__APIDisplayName__c
)</formula>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeApplicationRegion__c</fullName>
        <label>Lattice Application/Region</label>
        <referenceTo>LBI__LatticeApplicationRegion__c</referenceTo>
        <relationshipLabel>Lattice Primary Attributes</relationshipLabel>
        <relationshipName>LatticePrimaryAttributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__NumberOfFieldMappings__c</fullName>
        <description>Used to force an update of the model record when the mappings change.  This ensures cache resets.</description>
        <label>Number of Field Mappings</label>
        <summaryForeignKey>LBI__PrimaryAttributeMapping__c.LBI__PrimaryAttribute__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Lattice Primary Attribute</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__APIFieldType__c</columns>
        <columns>LBI__APIFieldName__c</columns>
        <columns>LBI__APIDisplayName__c</columns>
        <columns>LBI__DisplayNameFormula__c</columns>
        <columns>LBI__LatticeApplicationRegion__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PA-{0000000000}</displayFormat>
        <label>Primary Attribute Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Primary Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>